# bobetocalo_ciarp17

./: .gitattributes  CMakeLists.txt  README.md
data/: AlexNet.caffemodel  AlexNet_test.prototxt  GoogLeNet.caffemodel  GoogLeNet_test.prototxt  GoogLeNet_train.prototxt  ResNet_101.caffemodel  ResNet_101_test.prototxt  ResNet_152.caffemodel  ResNet_152_test.prototxt  ResNet_50.caffemodel  ResNet_50_test.prototxt  VGG_16.caffemodel  VGG_16_test.prototxt  VGG_19.caffemodel  VGG_19_test.prototxt  solver.prototxt
include/: FaceHeadPoseCnn.hpp
src/: FaceHeadPoseCnn.cpp
test/: face_headpose_bobetocalo_ciarp17_test.cpp  face_headpose_cnn_test.cpp
